--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -21,7 +21,9 @@
 .App-intro {
   font-size: large;
 }
-
+body {
+  background-color: purple;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
