--- a/ui/src/logo.css
+++ b/ui/src/logo.css
@@ -16,6 +16,6 @@
     background-color: black;
     width: 700px;
     padding: 1px;
-    border: 10px solid purple;
-    margin: auto;
+    border: 1px solid white;
+    margin: 30px auto;
 }
