--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -22,7 +22,7 @@
   font-size: large;
 }
 body {
-  background-color: purple;
+  background-color: #D0CCD2;
 }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
